[package]
name = "nsfw-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { features = ["cuda"], git = "https://github.com/neksodebe/candle.git", rev = "2634e54" }
candle-nn = { features = ["cuda"], git = "https://github.com/neksodebe/candle.git", rev = "2634e54" }
candle-transformers = { features = ["cuda"], git = "https://github.com/neksodebe/candle.git", rev = "2634e54" }
clap = { version = "4.5.50", features = ["derive"] }
hf-hub = "0.4.1"
image = "0.25.5"
